feat: Update styles

--- a/components/vi/content-2.html
+++ b/components/vi/content-2.html
@@ -1,7 +1,7 @@
 <section class="bg-light-blue w-screen ">
-    <div class="mx-auto container px-5 text-content py-10 lg:10 xl:pt-20 xl:pb-32 xl:px-0">
-        <h2 class="text-center font-heading font-bold text-2xl xl:text-5xl xl:leading-normal">Tính năng nổi bật</h2>
-        <div class="grid grid-cols-4 gap-x-3 gap-y-8 mt-6 md:grid-cols-6 md:gap-x-8 md:gap-y-6 md:mt-10 lg:mt-14 lg:grid-cols-9 lg:gap-x-5 lg:gap-y-8 xl:gap-x-10 xl:gap-y-8">
+    <div class="mx-auto container px-4 text-content py-10 lg:10 xl:pt-20 xl:pb-32 xl:px-0">
+        <h2 class="text-center font-heading font-bold text-2xl md:text-4xl xl:text-5xl xl:leading-normal">Tính năng nổi bật</h2>
+        <div class="grid grid-cols-4 gap-x-3 gap-y-8 mt-6 md:grid-cols-6 md:gap-x-8 md:gap-y-6 md:mt-10 lg:mt-14 lg:grid-cols-9 lg:gap-x-5 lg:gap-y-8 xl:gap-x-10 xl:gap-y-16">
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M33.3961 5.64654C33.3961 5.09769 33.4401 4.54885 33.5279 4H15.8572C8.39066 4 3.99988 8.43469 3.99988 15.899V32.1427C3.99988 39.5873 8.39066 44 15.8572 44H32.0789C39.5432 44 43.934 39.5873 43.934 32.1427V14.4281C43.3852 14.5159 42.8583 14.5796 42.3094 14.5796C37.3918 14.5796 33.3961 10.5862 33.3961 5.64654Z" fill="url(#paint0_linear_54_849)"/>
@@ -12,7 +12,7 @@
                         <stop offset="1" stop-color="#33B365"/>
                     </linearGradient>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Bảng tin</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Bảng tin</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48"
@@ -21,7 +21,7 @@
                     <path d="M11 35.0266C11 40.6053 16.9876 42 24 42C31.0508 42 37 40.5545 37 34.9758C37 29.3947 31.0124 28 24 28C16.9492 28 11 29.4455 11 35.0266Z" fill="#646AE4"/>
                     <path d="M23.899 24.9332C28.5713 24.9332 32.3176 21.1651 32.3176 16.4657C32.3176 11.7645 28.5713 8 23.899 8C19.2268 8 15.4805 11.7645 15.4805 16.4657C15.4805 21.1651 19.2268 24.9332 23.899 24.9332Z" fill="#646AE4"/>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Nhóm</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Nhóm</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48"
@@ -30,13 +30,13 @@
                     <path d="M11 35.0266C11 40.6053 16.9876 42 24 42C31.0508 42 37 40.5545 37 34.9758C37 29.3947 31.0124 28 24 28C16.9492 28 11 29.4455 11 35.0266Z" fill="#646AE4"/>
                     <path d="M23.899 24.9332C28.5713 24.9332 32.3176 21.1651 32.3176 16.4657C32.3176 11.7645 28.5713 8 23.899 8C19.2268 8 15.4805 11.7645 15.4805 16.4657C15.4805 21.1651 19.2268 24.9332 23.899 24.9332Z" fill="#646AE4"/>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">ORG chart</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">ORG chart</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M4 24.03C4 13.4942 12.42 4 24.04 4C35.4 4 44 13.314 44 23.97C44 36.3285 33.92 44 24 44C20.72 44 17.08 43.1187 14.16 41.3961C13.14 40.7752 12.28 40.3145 11.18 40.675L7.14 41.8768C6.12 42.1973 5.2 41.3961 5.5 40.3145L6.84 35.8277C7.06 35.2068 7.02 34.5458 6.7 34.025C4.98 30.8603 4 27.3951 4 24.03ZM21.4 24.03C21.4 25.4522 22.54 26.5939 23.96 26.6139C25.38 26.6139 26.52 25.4522 26.52 24.0501C26.52 22.6279 25.38 21.4862 23.96 21.4862C22.56 21.4662 21.4 22.6279 21.4 24.03ZM30.62 24.0501C30.62 25.4522 31.76 26.6139 33.18 26.6139C34.6 26.6139 35.74 25.4522 35.74 24.0501C35.74 22.6279 34.6 21.4862 33.18 21.4862C31.76 21.4862 30.62 22.6279 30.62 24.0501ZM14.74 26.6139C13.34 26.6139 12.18 25.4522 12.18 24.0501C12.18 22.6279 13.32 21.4862 14.74 21.4862C16.16 21.4862 17.3 22.6279 17.3 24.0501C17.3 25.4522 16.16 26.5939 14.74 26.6139Z" fill="#11C386"/>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Nhắn tin</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Nhắn tin</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48"
@@ -52,7 +52,7 @@
                         <stop offset="1" stop-color="#5CD1F7"/>
                     </linearGradient>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Chatbot</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Chatbot</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -63,7 +63,7 @@
                             <stop offset="1" stop-color="#C4A4F4"/>
                     </linearGradient>
                     </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Dự án</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Dự án</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -71,7 +71,7 @@
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M22.0195 26.6897C22.0671 27.7114 22.973 28.5088 24.0667 28.4644C25.1366 28.4177 25.9902 27.5737 25.9427 26.552C25.9165 25.5525 25.0368 24.7751 23.9668 24.7773C22.8731 24.8218 22.0172 25.668 22.0195 26.6897ZM31.8125 26.6568V26.6812C31.8363 27.7029 32.7398 28.4781 33.8359 28.4559C34.9058 28.4314 35.7594 27.5852 35.7356 26.5635C35.6857 25.5862 34.8274 24.7888 33.7598 24.791C32.6661 24.8132 31.8101 25.635 31.8125 26.6568ZM12 34.0736C12.0509 35.1815 12.9716 36.0485 14.0862 35.9979C15.1789 35.9497 16.0488 35.0321 15.9979 33.9243C15.9736 32.8405 15.0747 31.9976 13.9844 32C12.8698 32.0482 11.9976 32.9658 12 34.0736ZM33.7795 36.6277C32.6857 36.6055 31.8036 35.7637 31.8013 34.742C31.7775 33.7203 32.6548 32.874 33.7485 32.8496H33.7723C34.8898 32.8496 35.7957 33.6914 35.7957 34.7353C35.7981 35.7793 34.8946 36.6255 33.7795 36.6277ZM24.0747 36.5286C22.981 36.573 22.0775 35.7756 22.0276 34.7539C22.0276 33.7322 22.8811 32.8882 23.9749 32.8416C25.0448 32.8393 25.9269 33.6167 25.9507 34.614C26.0006 35.6379 25.1447 36.482 24.0747 36.5286ZM12.2227 26.7678C12.2702 27.7896 13.1761 28.5892 14.2698 28.5425C15.3398 28.4981 16.1933 27.6519 16.1434 26.6301C16.1196 25.6306 15.2399 24.8533 14.1676 24.8555C13.0739 24.8999 12.2203 25.7461 12.2227 26.7678Z" fill="#B52100"/>
                     <path d="M42 16.5157L6.00239 16.5602L6.00001 15.8694C5.99288 11.0518 8.55836 8.53751 13.1948 8.10883L13.1972 9.81909C13.1972 10.7764 13.9842 11.5293 15.0303 11.5271C16.0765 11.5271 16.8587 10.7719 16.8587 9.81465L16.8563 8.01777L30.9796 8L30.982 9.7991C30.982 10.7542 31.7689 11.5094 32.8151 11.5071C33.8375 11.5071 34.6435 10.7497 34.6435 9.79466L34.6411 8.0844C39.3013 8.45755 41.8977 10.963 42 15.7383V16.5157Z" fill="#F45734"/>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Lịch</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Lịch</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -84,7 +84,7 @@
                             <stop offset="1" stop-color="#30A960"/>
                     </linearGradient>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Ghi nhận</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Ghi nhận</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -96,14 +96,14 @@
                             <stop offset="1" stop-color="#5CD1F7"/>
                     </linearGradient>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Báo cáo</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Báo cáo</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M8.5 17.1677C8.5 8.77968 15.5094 2 23.988 2C32.4906 2 39.5 8.77968 39.5 17.1677C39.5 21.3945 37.9628 25.3186 35.4326 28.6446C32.6413 32.3135 29.201 35.51 25.3285 38.0191C24.4422 38.599 23.6424 38.6428 22.6696 38.0191C18.7751 35.51 15.3347 32.3135 12.5674 28.6446C10.0354 25.3186 8.5 21.3945 8.5 17.1677ZM18.8828 17.6402C18.8828 20.4501 21.1758 22.6602 23.9873 22.6602C26.8006 22.6602 29.1156 20.4501 29.1156 17.6402C29.1156 14.8521 26.8006 12.5344 23.9873 12.5344C21.1758 12.5344 18.8828 14.8521 18.8828 17.6402Z" fill="#F45734"/>
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M3.36823 40.0187C3.06627 40.3266 3.06383 40.4845 3.06383 40.5037C3.06383 40.5378 3.109 40.9352 4.12777 41.5781C5.07799 42.1777 6.55448 42.7744 8.51582 43.2979C12.4166 44.339 17.8917 45.0015 24 45.0015C30.1083 45.0015 35.5834 44.339 39.4842 43.2979C41.4455 42.7744 42.922 42.1777 43.8722 41.5781C44.891 40.9352 44.9362 40.5378 44.9362 40.5037C44.9362 40.4845 44.9337 40.3266 44.6318 40.0187C44.3234 39.7044 43.7946 39.3341 42.9905 38.9466C41.3874 38.174 38.9914 37.4748 35.9872 36.9523L36.5234 34C39.6673 34.5469 42.3777 35.309 44.344 36.2566C45.3246 36.7291 46.1961 37.2837 46.8421 37.9422C47.4944 38.6073 48 39.4704 48 40.5037C48 42.1257 46.7877 43.3061 45.5326 44.0982C44.2088 44.9335 42.3949 45.6291 40.2903 46.1908C36.0591 47.3201 30.3002 48 24 48C17.6998 48 11.9409 47.3201 7.70971 46.1908C5.6051 45.6291 3.79116 44.9335 2.46744 44.0982C1.21228 43.3061 0 42.1257 0 40.5037C0 39.4704 0.505649 38.6073 1.15794 37.9422C1.80386 37.2837 2.67543 36.7291 3.65602 36.2566C5.62226 35.309 8.33266 34.5469 11.4766 34L12.0128 36.9523C9.00862 37.4748 6.61263 38.174 5.00951 38.9466C4.20542 39.3341 3.67657 39.7044 3.36823 40.0187Z" fill="#FCC848"/>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Chấm công</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Chấm công</span>
             </div>
             <div class="flex flex-col gap-y-2 md:gap-y-4 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -111,7 +111,7 @@
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M8 4C5.79086 4 4 5.79086 4 8V40C4 42.2091 5.79086 44 8 44H24.4644C23.8229 42.7691 23.3726 41.4226 23.1529 40H11C9.34315 40 8 38.6569 8 37V11C8 9.34315 9.34315 8 11 8H33C34.6569 8 36 9.34315 36 11V25C37.3956 25 38.7399 25.2199 40 25.627V8C40 5.79086 38.2091 4 36 4H8ZM25.6141 30.18H13.74C13.14 30.12 12.56 30.4 12.24 30.92C11.92 31.42 11.92 32.08 12.24 32.6C12.56 33.1 13.14 33.4 13.74 33.32H23.8679C24.3047 32.1883 24.8953 31.1331 25.6141 30.18ZM13.74 12V12.02C12.878 12.02 12.18 12.72 12.18 13.58C12.18 14.44 12.878 15.14 13.74 15.14H19.718C20.58 15.14 21.28 14.44 21.28 13.558C21.28 12.7 20.58 12 19.718 12H13.74ZM29.42 24.18H13.74C12.878 24.18 12.18 23.48 12.18 22.62C12.18 21.76 12.878 21.058 13.74 21.058H29.42C30.28 21.058 30.98 21.76 30.98 22.62C30.98 23.48 30.28 24.18 29.42 24.18Z" fill="#5080FA"/>
                     <path d="M36 28C34.0222 28 32.0888 28.5865 30.4443 29.6853C28.7998 30.7841 27.5181 32.3459 26.7612 34.1732C26.0043 36.0004 25.8063 38.0111 26.1922 39.9509C26.578 41.8907 27.5304 43.6725 28.9289 45.0711C30.3275 46.4696 32.1093 47.422 34.0491 47.8079C35.9889 48.1937 37.9996 47.9957 39.8268 47.2388C41.6541 46.4819 43.2159 45.2002 44.3147 43.5557C45.4135 41.9112 46 39.9778 46 38C45.9967 35.3488 44.9421 32.8072 43.0675 30.9325C41.1928 29.0579 38.6512 28.0033 36 28ZM41.0354 36L36.5662 41.96C36.3681 42.2258 36.1152 42.4459 35.8245 42.6052C35.5338 42.7644 35.2122 42.8592 34.8815 42.8831C34.8277 42.8831 34.7723 42.8831 34.7185 42.8831C34.415 42.8826 34.1147 42.8223 33.8346 42.7056C33.5545 42.5889 33.3002 42.4182 33.0862 42.2031L30.7785 39.8954C30.562 39.6789 30.4404 39.3853 30.4404 39.0792C30.4404 38.7731 30.562 38.4795 30.7785 38.2631C30.9949 38.0466 31.2885 37.925 31.5946 37.925C31.9007 37.925 32.1943 38.0466 32.4108 38.2631L34.4108 40.2631C34.4498 40.3021 34.4967 40.3322 34.5484 40.3515C34.6 40.3708 34.6552 40.3787 34.7103 40.3748C34.7653 40.3709 34.8188 40.3551 34.8672 40.3287C34.9156 40.3022 34.9577 40.2657 34.9908 40.2215L39.1908 34.6154C39.3744 34.3706 39.6477 34.2087 39.9507 34.1654C40.2536 34.1222 40.5613 34.201 40.8062 34.3846C41.051 34.5682 41.2128 34.8416 41.2561 35.1445C41.2994 35.4475 41.219 35.7552 41.0354 36Z" fill="#F45734"/>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Phê duyệt</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Phê duyệt</span>
             </div>
             <div class="flex flex-col gap-y-2 md:gap-y-4 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -121,7 +121,7 @@
                             <stop offset="1" stop-color="#FFAA2B"/>
                         </linearGradient>
                     </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Khảo sát</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Khảo sát</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -134,7 +134,7 @@
                         <stop offset="1" stop-color="#30A960"/>
                     </linearGradient>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Ghi nhận</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Ghi nhận</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -146,7 +146,7 @@
                             <stop offset="1" stop-color="#23D884"/>
                     </linearGradient>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Phân quyền</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Phân quyền</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -163,7 +163,7 @@
                         <stop offset="1" stop-color="#5CD1F7"/>
                     </linearGradient>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Tổ chức</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Tổ chức</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -174,7 +174,7 @@
                     <path d="M28 24C28 22.8954 28.8954 22 30 22H38C39.1046 22 40 22.8954 40 24C40 25.1046 39.1046 26 38 26H30C28.8954 26 28 25.1046 28 24Z" fill="#011E67"/>
                     <path d="M30 30C28.8954 30 28 30.8954 28 32C28 33.1046 28.8954 34 30 34H38C39.1046 34 40 33.1046 40 32C40 30.8954 39.1046 30 38 30H30Z" fill="#011E67"/>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Thành viên</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Thành viên</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -191,7 +191,7 @@
                             <stop offset="1" stop-color="#30A960"/>
                         </linearGradient>
                     </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Phòng họp</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Phòng họp</span>
             </div>
             <div class="flex flex-col gap-y-2 lg:gap-y-6 items-center">
                 <svg class="w-7 h-7 md:w-9 md:h-9 xl:w-12 xl:h-12" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -199,7 +199,7 @@
                     <path d="M21.5195 13.1014C21.5195 12.0972 22.3336 11.2832 23.3377 11.2832C24.3419 11.2832 25.1559 12.0972 25.1559 13.1014V24.0105C25.1559 25.0146 24.3419 25.8287 23.3377 25.8287C22.3336 25.8287 21.5195 25.0146 21.5195 24.0105V13.1014Z" fill="black"/>
                     <path d="M32.4286 22.1923C33.4328 22.1923 34.2468 23.0063 34.2468 24.0105C34.2468 25.0146 33.4328 25.8287 32.4286 25.8287H23.3377C22.3336 25.8287 21.5195 25.0146 21.5195 24.0105C21.5195 23.0063 22.3336 22.1923 23.3377 22.1923L32.4286 22.1923Z" fill="black"/>
                 </svg>
-                <span class="text-[13px] leading-6 md:text-base xl:text-lg">Lịch sử</span>
+                <span class="text-[13px] leading-6 md:text-base xl:text-lg xl:leading-6">Lịch sử</span>
             </div>
         </div>
     </div>
