--- a/components/vi/content-5.html
+++ b/components/vi/content-5.html
@@ -1,5 +1,5 @@
 <section class="relative py-10 xl:py-40">
-    <div class="container w-full mx-auto grid content-center px-5 lg:gap-x-4 lg:grid-cols-12 xl:gap-x-6 xl:px-0">
+    <div class="container w-full mx-auto grid content-center pl-4 pr-6 lg:gap-x-4 lg:grid-cols-12 xl:gap-x-6 xl:px-0">
         <figure class="relative  md:mt-10 lg:-translate-x-1/24 lg:col-span-6">
             <img src="/images/content-5/image-1.png" alt="Gapo Work"
                  class="md:max-w-[720px] lg:max-w-[450px] xl:max-w-[650px] md:object-contain"/>
@@ -12,8 +12,8 @@
                     data-modal-trigger
                     aria-controls="modal-form"
                     aria-expanded="false"
-                    class="button font-button">
-                Chuyển đổi ngay
+                    class="button font-button mt-6 xl:mt-10 font-heading hover:bg-dark-primary duration-500 ease-in-out">
+                Liên hệ đăng ký
             </button>
         </div>
     </div>
