--- a/components/vi/modal-success.html
+++ b/components/vi/modal-success.html
@@ -9,9 +9,11 @@
                 tabindex="-1"
                 data-class-out="opacity-0"
                 data-class-in="opacity-50"
+                id="overlay-success"
                 class="opacity-50 fixed inset-0 w-full z-40 transition-opacity duration-300 bg-black select-none"></div>
         <div
                 data-modal-wrapper
+                id="wrapper-success"
                 data-class-out="opacity-0 translate-y-5"
                 data-class-in="opacity-100 translate-y-0"
                 class="w-full z-50 max-w-[500px] max-h-screen scrolling-touch transition-all duration-300 bg-white flex flex-col transform shadow-xl rounded-md m-5 opacity-100 translate-y-0">
