--- a/components/vi/content-1.html
+++ b/components/vi/content-1.html
@@ -1,5 +1,5 @@
 <section class="w-screen content-1 py-10 xl:py-24">
-    <div class="container w-full mx-auto px-5 grid lg:grid-cols-12 lg:gap-x-6 xl:px-0">
+    <div class="container w-full mx-auto pl-4 pr-6 grid lg:grid-cols-12 lg:gap-x-6 xl:px-0">
         <div class="lg:col-span-5 font-content">
             <h1 class="page-heading">
                 Phương án tốt nhất <br/>thay thế cho Workplace
@@ -51,7 +51,7 @@
                     aria-controls="modal-form"
                     aria-expanded="false"
                     type="button"
-                    class="button-modal button font-button">Liên hệ đăng ký
+                    class="button-modal button font-button mt-6 md:mt-10 hover:bg-dark-primary duration-500 ease-in-out">Liên hệ đăng ký
             </button>
         </div>
         <figure class="relative mt-4 md:mt-10 md:flex md:justify-center lg:block lg:mt-0 lg:col-span-7 lg:translate-x-1/12">
