--- a/components/vi/content-6.html
+++ b/components/vi/content-6.html
@@ -1,25 +1,26 @@
 <section class="relative bg-light-blue w-screen ">
     <div class="mx-auto container px-5  text-content py-10 lg:pt-20 lg:pb-32 lg:px-0">
-        <h2 class="text-center font-heading font-bold text-2xl xl:text-5xl xl:leading-[52px]">Khách hàng của
+        <h2 class="text-left md:text-center font-heading font-bold text-2xl xl:text-5xl xl:leading-[52px]">Khách hàng của
             GapoWork</h2>
         <div class="grid grid-cols-3 mt-6 md:grid-cols-4 md:mt-8 lg:mt-14 lg:grid-cols-5 lg:px-2 lg:border lg:border-[#0000000F] lg:rounded-3xl ">
-            <img src="/images/content-6/lpbank.png" alt="LPBANK" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/bidv.png" alt="BIDV" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/momo.png" alt="MOMO" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/f88.png" alt="F88" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/yody.png" alt="YODY" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/30shine.png" alt="30SHINE" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/edufit.png" alt="EDUFIT" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/digiworld.png" alt="DIGIWORLD" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/g-group.png" alt="G-GROUP" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/beatvn.png" alt="BEATVN" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/diem-nhan-group.png" alt="Điểm nhấn group" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/thai-binh-seed.png" alt="Thai Binh Seed" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/vnenconomy.png" alt="VNENCONOMY" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/dms.png" alt="DMS" class="xl:w-[255px] xl:h-[148px]"/>
-            <img src="/images/content-6/gov.png" alt="Bộ thông tin và truyền thông" class="xl:w-[255px] xl:h-[148px]"/>
+            <figure class="flex items-center"><img src="/images/content-6/lpbank.png" alt="LPBANK" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure><img src="/images/content-6/bidv.png" alt="BIDV" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure><img src="/images/content-6/momo.png" alt="MOMO" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure class="hidden xl:block"><img src="/images/content-6/f88.png" alt="F88" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure class="hidden xl:block"><img src="/images/content-6/yody.png" alt="YODY" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure><img src="/images/content-6/30shine.png" alt="30SHINE" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure><img src="/images/content-6/edufit.png" alt="EDUFIT" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure><img src="/images/content-6/digiworld.png" alt="DIGIWORLD" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure><img src="/images/content-6/g-group.png" alt="G-GROUP" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure><img src="/images/content-6/beatvn.png" alt="BEATVN" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure><img src="/images/content-6/diem-nhan-group.png" alt="Điểm nhấn group" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure><img src="/images/content-6/thai-binh-seed.png" alt="Thai Binh Seed" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure><img src="/images/content-6/vnenconomy.png" alt="VNENCONOMY" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure><img src="/images/content-6/dms.png" alt="DMS" class="xl:w-[255px] xl:h-[148px]"/></figure>
+            <figure class="col-start-2 md:col-start-auto"><img src="/images/content-6/gov.png" alt="Bộ thông tin và truyền thông" class="xl:w-[255px] xl:h-[148px]"/></figure>
         </div>
     </div>
-    <img src="/images/content-6/image-1.png" alt="Gapo Work" class="hidden xl:block xl:absolute xl:left-6 xl:-top-16 xl:w-[349px] xl:[171px]"/>
+    <figure><img src="/images/content-6/image-1.png" alt="Gapo Work"
+                 class="hidden xl:block xl:absolute xl:left-6 xl:-top-16 xl:w-[349px] xl:[171px]"/></figure>
 </section>
 
