--- a/components/vi/footer.html
+++ b/components/vi/footer.html
@@ -2,7 +2,7 @@
     <div class="mx-auto container px-4 lg:px-8 text-white grid xl:px-0 lg:grid-cols-12 md:gap-[30px]">
         <h2 class=" font-heading text-2xl md:text-3xl xl:text-[40px] xl:leading-[64px] lg:col-span-6 xl:col-span-7">Thu hẹp khoảng cách,<br/> mở rộng tầm nhìn
             cùng GapoWork</h2>
-        <div class="md:order-3 lg:order-none lg:col-span-6 xl:col-span-5 md:row-span-2 md:place-self-center">
+        <div class="sm:order-3 lg:order-none lg:col-span-6 xl:col-span-5 md:row-span-2 md:place-self-center">
             <img src="/images/footer-image.png" class="mt-6  w-full h-auto xl:w-[390px] lg:mt-0 xl:h-[234px] " alt="Gapo Work"/>
             <div class="flex justify-center gap-4 mt-7">
                 <a>
@@ -13,22 +13,22 @@
                 </a>
             </div>
         </div>
-        <div class="flex flex-col mt-6 gap-6 md:flex-row md:mt-0 lg:col-span-6 xl:col-span-7 md:items-center lg:gap-10">
+        <div class="flex flex-col mt-6 gap-6 sm:flex-row md:mt-0 lg:col-span-6 xl:col-span-7 md:items-center lg:gap-10">
             <div class="flex gap-6 items-center">
                 <img src="/images/sao-khue.png" class="w-11 h-[128px]" alt="Sao Khue Award"/>
                 <div class="flex flex-col gap-3 ">
-                    <p class="font-bold lg:font-semibold lg:text-lg ">Sao Khue Award 2022</p>
+                    <p class="font-semibold lg:text-lg ">Sao Khue Award 2022</p>
                     <p class="font-medium opacity-60">Vietnam ICT Excellence</p>
                 </div>
             </div>
             <div class="flex gap-6 items-center">
                 <img src="/images/vietnam-digital.png" class="w-11 h-[128px]" alt="Vietnam Digital"/>
-                <div class="flex flex-col gap-3">
-                    <p class="font-bold lg:font-semibold lg:text-lg">Vietnam Digital Award</p>
-                    <p class="font-medium opacity-60">Innovative Digital Solution</p>
+                <div class="flex flex-col gap-3 font-google-font">
+                    <p class="font-bold lg:text-lg">Vietnam Digital Award</p>
+                    <p class="opacity-60">Innovative Digital Solution</p>
                 </div>
             </div>
         </div>
-        <p class="mt-10 md:order-last lg:order-none lg:col-span-12 text-left md:text-center text-[15px] leading-5 opacity-80 lg:mt-28">© 2024. Công ty Cổ phần Công nghệ Gapo.</p>
+        <p class="mt-10 sm:order-last lg:order-none lg:col-span-12 text-left sm:text-center text-[15px] leading-5 opacity-80 lg:mt-28">© 2024. Công ty Cổ phần Công nghệ Gapo.</p>
     </div>
 </section>
