--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
         @apply grid lg:grid-cols-table-lg xl:grid-cols-table-xl border-b border-[#E9E9EA]
     }
     .button{
-        @apply font-bold py-3 w-full rounded-xl bg-primary text-white mt-3 text-base md:mt-5 md:w-[239px] md:text-xl lg:leading-10 xl:py-2 hover:bg-dark-primary
+        @apply font-bold py-3 w-full rounded-lg bg-primary text-white text-base md:rounded-xl md:w-[239px] md:text-xl lg:leading-10 xl:py-2 hover:bg-dark-primary
     }
     .input-form{
        @apply rounded-xl bg-form-gray border border-form-gray h-12 w-full py-1 px-3 font-medium
@@ -47,13 +47,41 @@
     font-weight: 500;
     font-style: normal;
 }
-
+@font-face {
+    font-family: 'SF-Pro';
+    src: url('./font/SF-Pro-Font/SF-Pro-Display-Semibold.otf');
+    font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Inter';
+    src: url('./font/Inter/Inter-Medium.eot'),
+    url('./font/Inter/Inter-Medium.woff2') format('woff2'),
+    url('./font/Inter/Inter-Medium.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+}
 @font-face {
     font-family: 'Nunito-San';
     src: url('./font/NunitoSans/NunitoSans-Bold.eot'),
     url('./font/NunitoSans/NunitoSans-Bold.woff2') format('woff2'),
     url('./font/NunitoSans/NunitoSans-Bold.woff') format('woff');
     font-weight: 700;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Nunito-San';
+    src: url('./font/NunitoSans/NunitoSans-SemiBold.eot'),
+    url('./font/NunitoSans/NunitoSans-SemiBold.woff2') format('woff2'),
+    url('./font/NunitoSans/NunitoSans-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Google-Font';
+    src: url('./font/OpenFont/OpenSans-SemiBold.ttf');
+    font-weight: 600;
     font-style: normal;
 }
 
