--- a/components/vi/modal.html
+++ b/components/vi/modal.html
@@ -85,7 +85,7 @@
                             </select>
                             <span id="errorScale" class="text-red font-normal text-xs"></span>
                         </label>
-                        <button id="submitBtn" type="button" class="flex justify-center items-center rounded-lg col-span-2 w-full py-3 bg-primary text-white mt-2 hover:bg-dark-primary">
+                        <button id="submitBtn" type="button" class="font-heading text-[17px] font-bold leading-7 flex justify-center items-center rounded-lg col-span-2 w-full py-3 bg-primary text-white mt-2 hover:bg-dark-primary">
                             <span id="isLoading" class="hidden border-white h-6 w-6 animate-spin rounded-full border-4 border-t-primary" ></span>
                             <span id="content-submit">Gửi thông tin</span>
                         </button>
