feat: Update styles

--- a/components/vi/modal.html
+++ b/components/vi/modal.html
@@ -39,7 +39,7 @@
                     <img src="/images/background/bg-modal.png" alt="Gapo Work" class="w-full h-auto rounded-xl">
                 </div>
                 <div class="pt-20 xl:pt-10 pb-12 px-6 bg-white lg:flex-1">
-                    <p class="text-lg font-medium text-[#151917]">Nhập thông tin đăng ký</p>
+                    <p class="text-2xl leading-6 font-bold lg:text-lg lg:font-medium text-[#151917]">Nhập thông tin đăng ký</p>
                     <form class="grid grid-cols-2 gap-4 mt-6 text-form-black text-form font-semibold">
                         <label class="col-span-2 flex flex-col gap-1">
                             <p>Họ tên <span class="text-form-red">*</span></p>
@@ -74,7 +74,7 @@
                             <span id="errorCompany" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Quy mô <span class="text-form-red">*</span></p>
+                            <p>Quy mô </p>
                             <select id="scaleInput" name="scaleInput" class="input-form">
                                 <option value=""></option>
                                 <option value="Dưới 50">Dưới 50</option>
@@ -83,7 +83,6 @@
                                 <option value="500 - 1000">500 - 1000</option>
                                 <option value="trên 1000">Trên 1000</option>
                             </select>
-                            <span id="errorScale" class="text-red font-normal text-xs"></span>
                         </label>
                         <button id="submitBtn" type="button" class="font-heading text-[17px] font-bold leading-7 flex justify-center items-center rounded-lg col-span-2 w-full py-3 bg-primary text-white mt-2 hover:bg-dark-primary">
                             <span id="isLoading" class="hidden border-white h-6 w-6 animate-spin rounded-full border-4 border-t-primary" ></span>
