feat: href footer

--- a/components/vi/footer.html
+++ b/components/vi/footer.html
@@ -5,10 +5,10 @@
         <div class="sm:order-3 lg:order-none lg:col-span-6 xl:col-span-5 md:row-span-2 md:place-self-center">
             <img src="/images/footer-image.png" class="mt-6  w-full h-auto xl:w-[390px] lg:mt-0 xl:h-[234px] " alt="Gapo Work"/>
             <div class="flex justify-center gap-4 mt-7">
-                <a>
+                <a href="https://play.google.com/store/apps/details?id=work.vn.gapo.app&amp;hl=en&amp;gl=US">
                     <img src="/images/playstore.svg" class="xl:w-[186px] xl:h-[55px]" alt="Play Store"/>
                 </a>
-                <a>
+                <a href="https://apps.apple.com/vn/app/gapowork/id1554231876">
                     <img src="/images/appstore.svg" class="xl:w-[186px] xl:h-[55px]" alt="App Store"/>
                 </a>
             </div>
