feat: fix font-family

--- a/components/en/content-4.html
+++ b/components/en/content-4.html
@@ -1,12 +1,16 @@
 <section class="relative bg-dark-blue py-10 lg:rounded-[64px] lg:pt-[72px] lg:pb-[93px]">
-    <div class="container w-full mx-auto grid content-center px-5 lg:gap-x-4 lg:grid-cols-12 xl:gap-x-6 xl:px-0">
+    <div class="container w-full mx-auto grid content-center px-4 lg:gap-x-4 lg:grid-cols-12 xl:gap-x-6 xl:px-0">
         <div class="font-content flex flex-col justify-center mt-6 order-2 lg:mt-0 lg:order-1 lg:col-span-6 ">
-            <h2 class="font-heading text-white text-2xl font-bold xl:tracking-[.03em] md:text-3xl xl:text-5xl xl:leading-[56px]">
+            <h2 class="page-heading text-white">
                 Chuyển đổi từ Workplace sang GapoWork nhanh gọn và thuận tiện
             </h2>
-            <div class="flex flex-col mt-6 text-white text-sm gap-3 xl:gap-5 xl:text-base">
+            <div class="font-heading flex flex-col mt-6 text-[#FAFBFF] text-sm gap-6 xl:gap-10 xl:text-base">
                 <p>Kèm dịch vụ triển khai bổ sung mà không mất thêm phí để hỗ trợ<br> quá trình chuyển đổi của khách hàng.</p>
-                <button type="button" class="font-bold font-button py-3 w-full rounded-xl bg-primary text-white mt-3 xl:mt-5 xl:text-xl xl:leading-10 xl:py-2 lg:w-[239px] hover:bg-dark-primary">
+                <button type="button"
+                        data-modal-trigger
+                        aria-controls="modal-form"
+                        aria-expanded="false"
+                        class="button font-button hover:bg-dark-primary duration-500 ease-in-out">
                     Chuyển đổi ngay
                 </button>
             </div>
