--- a/components/en/content-5.html
+++ b/components/en/content-5.html
@@ -1,5 +1,5 @@
 <section class="relative py-10 xl:py-40">
-    <div class="container w-full mx-auto grid content-center px-5 lg:gap-x-4 lg:grid-cols-12 xl:gap-x-6 xl:px-0">
+    <div class="container w-full mx-auto grid content-center pl-4 pr-6 lg:gap-x-4 lg:grid-cols-12 xl:gap-x-6 xl:px-0">
         <figure class="relative  md:mt-10 lg:-translate-x-1/24 lg:col-span-6">
             <img src="/images/content-5/image-1.png" alt="Gapo Work"
                  class="md:max-w-[720px] lg:max-w-[450px] xl:max-w-[650px] md:object-contain"/>
@@ -8,8 +8,12 @@
             <h2 class="font-heading text-black text-2xl font-bold md:text-3xl xl:text-[40px] xl:leading-[64px]">
                 <span class="text-primary">83% khách hàng</span> đồng ý rằng GapoWork thúc đẩy hoạt động truyền thông của lãnh đạo.
             </h2>
-            <button type="button" class="font-bold font-button py-3 w-full rounded-xl bg-primary text-white mt-3 lg:mt-5 lg:text-xl lg:leading-10 lg:py-2 lg:w-[239px] hover:bg-dark-primary">
-                Chuyển đổi ngay
+            <button type="button"
+                    data-modal-trigger
+                    aria-controls="modal-form"
+                    aria-expanded="false"
+                    class="button font-button mt-6 xl:mt-10 font-heading hover:bg-dark-primary duration-500 ease-in-out">
+                Liên hệ đăng ký
             </button>
         </div>
     </div>
