--- a/components/en/modal.html
+++ b/components/en/modal.html
@@ -31,18 +31,17 @@
                 </button>
                 <div class="hidden lg:flex lg:flex-col lg:gap-6 lg:w-[560px] lg:h-full lg:p-6 text-white">
                     <div>
-                        <h3 class="font-heading text-[32px] leading-10">Phương án tốt nhất thay thế cho Workplace</h3>
-                        <p class="text-content mt-4">Kèm chuyển đổi dữ liệu và triển khai, không mất thêm phí để hỗ trợ
-                            khách
-                            hàng.</p>
+                        <h3 class="font-heading text-[32px] leading-10">The Best Alternative to Workplace</h3>
+                        <p class="text-content mt-4">Includes data migration and deployment at no extra cost to support customers.</p>
+
                     </div>
                     <img src="/images/background/bg-modal.png" alt="Gapo Work" class="w-full h-auto rounded-xl">
                 </div>
                 <div class="pt-20 xl:pt-10 pb-12 px-6 bg-white lg:flex-1">
-                    <p class="text-2xl leading-6 font-bold lg:text-lg lg:font-medium text-[#151917]">Nhập thông tin đăng ký</p>
+                    <p class="text-2xl leading-6 font-bold lg:text-lg lg:font-medium text-[#151917]">Enter Registration Information</p>
                     <form class="grid grid-cols-2 gap-4 mt-6 text-form-black text-form font-semibold">
                         <label class="col-span-2 flex flex-col gap-1">
-                            <p>Họ tên <span class="text-form-red">*</span></p>
+                            <p>Full Name <span class="text-form-red">*</span></p>
                             <input id="nameInput" class="input-form" type="text"/>
                             <span id="errorName" class="text-red font-normal text-xs"></span>
                         </label>
@@ -52,12 +51,12 @@
                             <span id="errorEmail" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Số điện thoại <span class="text-form-red">*</span></p>
+                            <p>Phone Number <span class="text-form-red">*</span></p>
                             <input id="phoneInput" class="input-form" type="text"/>
                             <span id="errorPhone" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Chức danh <span class="text-form-red">*</span></p>
+                            <p>Job Title <span class="text-form-red">*</span></p>
                             <select id="titleInput" name="title" class="input-form">
                                 <option value=""></option>
                                 <option value="CEO/Founder/Chủ tịch">CEO/Founder/Chủ tịch</option>
@@ -69,12 +68,12 @@
                             <span id="errorTitle" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Công ty <span class="text-form-red">*</span></p>
+                            <p>Company <span class="text-form-red">*</span></p>
                             <input id="companyInput" class="input-form" type="text"/>
                             <span id="errorCompany" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Quy mô </p>
+                            <p>Scale </p>
                             <select id="scaleInput" name="scaleInput" class="input-form">
                                 <option value=""></option>
                                 <option value="Dưới 50">Dưới 50</option>
@@ -86,7 +85,7 @@
                         </label>
                         <button id="submitBtn" type="button" class="font-heading text-[17px] font-bold leading-7 flex justify-center items-center rounded-lg col-span-2 w-full py-3 bg-primary text-white mt-2 hover:bg-dark-primary">
                             <span id="isLoading" class="hidden border-white h-6 w-6 animate-spin rounded-full border-4 border-t-primary" ></span>
-                            <span id="content-submit">Gửi thông tin</span>
+                            <span id="content-submit">Submit Information</span>
                         </button>
                     </form>
                 </div>
