--- a/components/en/content-1.html
+++ b/components/en/content-1.html
@@ -2,7 +2,7 @@
     <div class="container w-full mx-auto pl-4 pr-6 grid lg:grid-cols-12 lg:gap-x-6 xl:px-0">
         <div class="lg:col-span-5 font-content">
             <h1 class="page-heading">
-                Phương án tốt nhất <br/>thay thế cho Workplace
+                The Best Alternative <br/>to Workplace
             </h1>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1 mt-6 text-secondary text-sm gap-3 xl:gap-5 lg:text-base">
                 <div class="flex gap-1">
@@ -11,7 +11,7 @@
                         <path d="M8.11256 17.6949C7.4028 16.8975 6.82946 16.1175 6.27563 15.3621C5.76955 14.6752 5.33074 13.9412 4.96526 13.1703C4.73651 12.7025 4.63526 12.2288 5.13075 11.9243C6.55076 11.0516 6.84176 11.8849 7.61359 12.8517C8.07109 13.4246 8.74571 14.3693 9.16841 14.9662C9.57218 15.5362 10.0644 14.5074 10.2609 14.2171C10.9593 13.1855 12.7745 10.6598 13.5246 9.72617C14.2367 8.8399 16.5353 6.35702 16.9638 5.96211C17.3285 5.62585 18.0986 4.8883 18.6164 5.29517C19.1606 5.72267 19.4264 6.5353 19.0439 7.06367C18.3777 7.98355 17.3314 8.85861 16.6074 9.7345C15.1418 11.5075 13.7543 13.4186 12.4224 15.3215C11.9698 15.9682 11.3343 17.0512 10.9398 17.7525C10.2019 19.0645 9.55369 19.3141 8.11256 17.6949Z"
                               fill="#3AB67B"/>
                     </svg>
-                    <p class="flex-1">Chuyển toàn bộ dữ liệu của tổ chức bạn trên Workplace qua GapoWork </p>
+                    <p class="flex-1">Transfer all your organization's data from Workplace to GapoWork</p>
                 </div>
                 <div class="flex gap-1">
                     <svg class="xl:w-6" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -19,7 +19,7 @@
                         <path d="M8.11256 17.6949C7.4028 16.8975 6.82946 16.1175 6.27563 15.3621C5.76955 14.6752 5.33074 13.9412 4.96526 13.1703C4.73651 12.7025 4.63526 12.2288 5.13075 11.9243C6.55076 11.0516 6.84176 11.8849 7.61359 12.8517C8.07109 13.4246 8.74571 14.3693 9.16841 14.9662C9.57218 15.5362 10.0644 14.5074 10.2609 14.2171C10.9593 13.1855 12.7745 10.6598 13.5246 9.72617C14.2367 8.8399 16.5353 6.35702 16.9638 5.96211C17.3285 5.62585 18.0986 4.8883 18.6164 5.29517C19.1606 5.72267 19.4264 6.5353 19.0439 7.06367C18.3777 7.98355 17.3314 8.85861 16.6074 9.7345C15.1418 11.5075 13.7543 13.4186 12.4224 15.3215C11.9698 15.9682 11.3343 17.0512 10.9398 17.7525C10.2019 19.0645 9.55369 19.3141 8.11256 17.6949Z"
                               fill="#3AB67B"/>
                     </svg>
-                    <p class="flex-1">Tiết kiệm chi phí lên đến 50% với GapoWork</p>
+                    <p class="flex-1">Save up to 50% on costs with GapoWork</p>
                 </div>
                 <div class="flex gap-1">
                     <svg class="xl:w-6" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -27,7 +27,17 @@
                         <path d="M8.11256 17.6949C7.4028 16.8975 6.82946 16.1175 6.27563 15.3621C5.76955 14.6752 5.33074 13.9412 4.96526 13.1703C4.73651 12.7025 4.63526 12.2288 5.13075 11.9243C6.55076 11.0516 6.84176 11.8849 7.61359 12.8517C8.07109 13.4246 8.74571 14.3693 9.16841 14.9662C9.57218 15.5362 10.0644 14.5074 10.2609 14.2171C10.9593 13.1855 12.7745 10.6598 13.5246 9.72617C14.2367 8.8399 16.5353 6.35702 16.9638 5.96211C17.3285 5.62585 18.0986 4.8883 18.6164 5.29517C19.1606 5.72267 19.4264 6.5353 19.0439 7.06367C18.3777 7.98355 17.3314 8.85861 16.6074 9.7345C15.1418 11.5075 13.7543 13.4186 12.4224 15.3215C11.9698 15.9682 11.3343 17.0512 10.9398 17.7525C10.2019 19.0645 9.55369 19.3141 8.11256 17.6949Z"
                               fill="#3AB67B"/>
                     </svg>
-                    <p class="flex-1">Trung tâm tri thức toàn doanh nghiệp, bảo mật tuyệt đối </p>
+                    <p class="flex-1">Enterprise-wide knowledge center, absolutely secure</p>
+                </div>
+                <div class="flex gap-1">
+                    <svg class="xl:w-6" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8.11256 17.6949C7.4028 16.8975 6.82946 16.1175 6.27563 15.3621C5.76955 14.6752 5.33074 13.9412 4.96526 13.1703C4.73651 12.7025 4.63526 12.2288 5.13075 11.9243C6.55076 11.0516 6.84176 11.8849 7.61359 12.8517C8.07109 13.4246 8.74571 14.3693 9.16841 14.9662C9.57218 15.5362 10.0644 14.5074 10.2609 14.2171C10.9593 13.1855 12.7745 10.6598 13.5246 9.72617C14.2367 8.8399 16.5353 6.35702 16.9638 5.96211C
+
+17.3285 5.62585 18.0986 4.8883 18.6164 5.29517C19.1606 5.72267 19.4264 6.5353 19.0439 7.06367C18.3777 7.98355 17.3314 8.85861 16.6074 9.7345C15.1418 11.5075 13.7543 13.4186 12.4224 15.3215C11.9698 15.9682 11.3343 17.0512 10.9398 17.7525C10.2019 19.0645 9.55369 19.3141 8.11256 17.6949Z"
+                              fill="#3AB67B"/>
+                    </svg>
+                    <p class="flex-1">The only portal that solves the issue of overlapping applications (Communication, interaction, project management, HR)</p>
                 </div>
                 <div class="flex gap-1">
                     <svg class="xl:w-6" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -35,23 +45,14 @@
                         <path d="M8.11256 17.6949C7.4028 16.8975 6.82946 16.1175 6.27563 15.3621C5.76955 14.6752 5.33074 13.9412 4.96526 13.1703C4.73651 12.7025 4.63526 12.2288 5.13075 11.9243C6.55076 11.0516 6.84176 11.8849 7.61359 12.8517C8.07109 13.4246 8.74571 14.3693 9.16841 14.9662C9.57218 15.5362 10.0644 14.5074 10.2609 14.2171C10.9593 13.1855 12.7745 10.6598 13.5246 9.72617C14.2367 8.8399 16.5353 6.35702 16.9638 5.96211C17.3285 5.62585 18.0986 4.8883 18.6164 5.29517C19.1606 5.72267 19.4264 6.5353 19.0439 7.06367C18.3777 7.98355 17.3314 8.85861 16.6074 9.7345C15.1418 11.5075 13.7543 13.4186 12.4224 15.3215C11.9698 15.9682 11.3343 17.0512 10.9398 17.7525C10.2019 19.0645 9.55369 19.3141 8.11256 17.6949Z"
                               fill="#3AB67B"/>
                     </svg>
-                    <p class="flex-1">Cổng thông tin duy nhất giải quyết vấn đề chồng chéo ứng dụng (Truyền
-                        thông, giao tiếp, quản lý dự án, nhân sự)</p>
-                </div>
-                <div class="flex gap-1">
-                    <svg class="xl:w-6" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M8.11256 17.6949C7.4028 16.8975 6.82946 16.1175 6.27563 15.3621C5.76955 14.6752 5.33074 13.9412 4.96526 13.1703C4.73651 12.7025 4.63526 12.2288 5.13075 11.9243C6.55076 11.0516 6.84176 11.8849 7.61359 12.8517C8.07109 13.4246 8.74571 14.3693 9.16841 14.9662C9.57218 15.5362 10.0644 14.5074 10.2609 14.2171C10.9593 13.1855 12.7745 10.6598 13.5246 9.72617C14.2367 8.8399 16.5353 6.35702 16.9638 5.96211C17.3285 5.62585 18.0986 4.8883 18.6164 5.29517C19.1606 5.72267 19.4264 6.5353 19.0439 7.06367C18.3777 7.98355 17.3314 8.85861 16.6074 9.7345C15.1418 11.5075 13.7543 13.4186 12.4224 15.3215C11.9698 15.9682 11.3343 17.0512 10.9398 17.7525C10.2019 19.0645 9.55369 19.3141 8.11256 17.6949Z"
-                              fill="#3AB67B"/>
-                    </svg>
-                    <p class="flex-1">Dịch vụ 5 sao với đội ngũ Việt Nam hỗ trợ nhiệt tình 24/7</p>
+                    <p class="flex-1">5-star service with a Vietnamese team providing enthusiastic 24/7 support</p>
                 </div>
             </div>
             <button data-modal-trigger
                     aria-controls="modal-form"
                     aria-expanded="false"
                     type="button"
-                    class="button-modal button font-button mt-6 md:mt-10 hover:bg-dark-primary duration-500 ease-in-out">Liên hệ đăng ký
+                    class="button-modal button font-button mt-6 md:mt-10 hover:bg-dark-primary duration-500 ease-in-out">Contact to Register
             </button>
         </div>
         <figure class="relative mt-4 md:mt-10 md:flex md:justify-center lg:block lg:mt-0 lg:col-span-7 lg:translate-x-1/12">
