--- a/components/en/content-4.html
+++ b/components/en/content-4.html
@@ -2,16 +2,17 @@
     <div class="container w-full mx-auto grid content-center px-4 lg:gap-x-4 lg:grid-cols-12 xl:gap-x-6 xl:px-0">
         <div class="font-content flex flex-col justify-center mt-6 order-2 lg:mt-0 lg:order-1 lg:col-span-6 ">
             <h2 class="page-heading text-white">
-                Chuyển đổi từ Workplace sang GapoWork nhanh gọn và thuận tiện
+                Easily and conveniently switch from Workplace to GapoWork
             </h2>
+
             <div class="font-heading flex flex-col mt-6 text-[#FAFBFF] text-sm gap-6 xl:gap-10 xl:text-base">
-                <p>Kèm dịch vụ triển khai bổ sung mà không mất thêm phí để hỗ trợ<br> quá trình chuyển đổi của khách hàng.</p>
+                <p>Includes additional deployment services at no extra cost to support<br> the customer's transition process.</p>
                 <button type="button"
                         data-modal-trigger
                         aria-controls="modal-form"
                         aria-expanded="false"
                         class="button font-button hover:bg-dark-primary duration-500 ease-in-out">
-                    Chuyển đổi ngay
+                    Switch now
                 </button>
             </div>
         </div>
