--- a/components/en/content-5.html
+++ b/components/en/content-5.html
@@ -6,14 +6,14 @@
         </figure>
         <div class="font-content flex flex-col justify-center mt-6 order-2 lg:mt-0 lg:col-span-6 xl:translate-x-1/24">
             <h2 class="font-heading text-black text-2xl font-bold md:text-3xl xl:text-[40px] xl:leading-[64px]">
-                <span class="text-primary">83% khách hàng</span> đồng ý rằng GapoWork thúc đẩy hoạt động truyền thông của lãnh đạo.
+                <span class="text-primary">83% of customers</span> agree that GapoWork enhances leadership communication activities.
             </h2>
             <button type="button"
                     data-modal-trigger
                     aria-controls="modal-form"
                     aria-expanded="false"
                     class="button font-button mt-6 xl:mt-10 font-heading hover:bg-dark-primary duration-500 ease-in-out">
-                Liên hệ đăng ký
+                Contact to register
             </button>
         </div>
     </div>
