--- a/components/en/content-6.html
+++ b/components/en/content-6.html
@@ -1,7 +1,6 @@
 <section class="relative bg-light-blue w-screen ">
     <div class="mx-auto container px-5  text-content py-10 lg:pt-20 lg:pb-32 lg:px-0">
-        <h2 class="text-left md:text-center font-heading font-bold text-2xl xl:text-5xl xl:leading-[52px]">Khách hàng của
-            GapoWork</h2>
+        <h2 class="text-left md:text-center font-heading font-bold text-2xl xl:text-5xl xl:leading-[52px]">GapoWork Customers</h2>
         <div class="grid grid-cols-3 mt-6 md:grid-cols-4 md:mt-8 lg:mt-14 lg:grid-cols-5 lg:px-2 lg:border lg:border-[#0000000F] lg:rounded-3xl ">
             <figure class="flex items-center"><img src="/images/content-6/lpbank.png" alt="LPBANK" class="xl:w-[255px] xl:h-[148px]"/></figure>
             <figure><img src="/images/content-6/bidv.png" alt="BIDV" class="xl:w-[255px] xl:h-[148px]"/></figure>
