--- a/components/en/modal-success.html
+++ b/components/en/modal-success.html
@@ -20,14 +20,14 @@
             <div class="w-full flex flex-col p-6 items-center relative mx-auto bg-white rounded-2xl">
               <img src="/images/success.svg" alt="Success" width="452" height="205" class="max-w-[231px] max-h-[105px] lg:max-w-[452px] lg:max-h-[205px]"/>
 
-                <p class="my-4 text-lg lg:text-xl font-bold">Đăng ký thành công!</p>
-                <p class="my-1 text-sm lg:text-base text-center">Trong vòng 24h tới, vui lòng chú ý điện thoại và kiểm tra hòm thư, đội ngũ GapoWork sẽ liên hệ và hỗ trợ tư vấn chi tiết!</p>
+                <p class="my-4 text-lg lg:text-xl font-bold">Registration Successful!</p>
+                <p class="my-1 text-sm lg:text-base text-center">Within 24 hours, please pay attention to your phone and check your email, the GapoWork team will contact you to provide detailed advice and support!</p>
                 <button
                         id="button-success"
                         data-modal-close
                         aria-label="Close"
                         class="py-3 bg-primary text-white rounded-xl w-[180px] mt-4 hover:bg-dark-primary  ease-out duration-300">
-                    Tôi hiểu rồi
+                    I understand now
                 </button>
             </div>
         </div>
