--- a/components/vi/modal-success.html
+++ b/components/vi/modal-success.html
@@ -26,7 +26,7 @@
                         id="button-success"
                         data-modal-close
                         aria-label="Close"
-                        class="py-3 bg-primary text-white rounded-xl w-[180px] mt-4 hover:bg-dark-primary  ease-out duration-300">
+                        class="py-3 bg-primary text-white rounded-xl w-full lg:w-[180px] mt-4 hover:bg-dark-primary  ease-out duration-300">
                     Tôi hiểu rồi
                 </button>
             </div>
